--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2019.3.9
 chardet==3.0.4
 decorator==4.3.2
 defusedxml==0.5.0
+elasticsearch==6.3.1
 entrypoints==0.3
 idna==2.8
 ipykernel==5.1.0
