--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ mistune==0.8.4
 nbconvert==5.5.0
 nbformat==4.4.0
 notebook==5.7.8
+pandas==0.23.4
 pandocfilters==1.4.2
 parso==0.5.0
 pexpect==4.7.0
