--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,7 +13,7 @@ services:
   
   elastic:
     build:
-      context: ../.
+      context: elasticsearch/es-docker
       dockerfile: Dockerfile
     container_name: hello-ltr-elastic
     ports:
