Updated raw url notebooks to work with either env

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,7 +10,11 @@ RUN useradd -ms /bin/bash ltr
 WORKDIR /home/ltr
 
 # Clone repo and pull requirements
-RUN git clone https://github.com/o19s/hello-ltr
+#RUN git clone https://github.com/o19s/hello-ltr
+
+# To debug a branch, comment the above line and run this instead
+RUN git clone --single-branch --branch fix/raw_url_hosts https://github.com/o19s/hello-ltr
+
 RUN chown -R ltr.ltr hello-ltr
 WORKDIR /home/ltr/hello-ltr
 
