Solr user owns msmarco confs

--- a/docker/solr/Dockerfile
+++ b/docker/solr/Dockerfile
@@ -6,6 +6,7 @@ ADD tmdb server/solr/configsets/tmdb
 ADD msmarco server/solr/configsets/msmarco
 
 RUN chown solr:solr server/solr/configsets/tmdb
+RUN chown solr:solr server/solr/configsets/msmarco
 
 USER solr
 
