--- a/docker/solr/docker-compose.yml
+++ b/docker/solr/docker-compose.yml
@@ -6,10 +6,11 @@ services:
       - "8983"
     ports:
       - "8983:8983"
+    volumes:
+      - data:/var/solr
     environment:
       SERVER_HOST: "0.0.0.0"
-    volumes:
-      - tlre-solr-data:/usr/share/elasticsearch/data
+    mem_limit: 4096m
+    mem_reservation: 4096m
 volumes:
-  tlre-solr-data:
-    driver: local
+  data:
