--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,67 @@
+alembic==1.4.2
 appnope==0.1.0
 attrs==19.1.0
 backcall==0.1.0
 bleach==3.1.0
-certifi==2019.6.16
+certifi==2019.3.9
 chardet==3.0.4
-decorator==4.4.0
-defusedxml==0.6.0
+cycler==0.10.0
+decorator==4.3.2
+defusedxml==0.5.0
 elasticsearch==6.3.1
 entrypoints==0.3
+fuzzywuzzy==0.18.0
 idna==2.8
-ipykernel==5.1.1
-ipython==7.5.0
+ipykernel==5.1.0
+ipython==7.3.0
 ipython-genutils==0.2.0
 ipywidgets==7.4.2
-jedi==0.14.0
-Jinja2==2.10.1
+jedi==0.13.3
+Jinja2==2.10
 jsonschema==3.0.1
 jupyter==1.0.0
 jupyter-client==5.2.4
 jupyter-console==6.0.0
-jupyter-core==4.5.0
+jupyter-core==4.4.0
+kiwisolver==1.1.0
+Mako==1.1.2
 MarkupSafe==1.1.1
+matplotlib==3.1.3
 mistune==0.8.4
-nbconvert==5.5.0
+nbclean==0.3.2
+nbconvert==5.6.1
 nbformat==4.4.0
-notebook==5.7.8
-pandas==0.23.4
+nbgrader==0.6.1
+notebook==5.7.6
+numpy==1.16.2
+pandas==0.24.1
 pandocfilters==1.4.2
-parso==0.5.0
-pexpect==4.7.0
+parso==0.3.4
+pexpect==4.6.0
 pickleshare==0.7.5
 plotly==3.7.0
-prometheus-client==0.7.1
+prometheus-client==0.6.0
 prompt-toolkit==2.0.9
 ptyprocess==0.6.0
-Pygments==2.4.2
-pyrsistent==0.15.2
+Pygments==2.3.1
+pyparsing==2.4.6
+pyrsistent==0.14.11
 python-dateutil==2.8.0
-pytz==2019.1
+python-editor==1.0.4
+pytz==2018.9
 pyzmq==18.0.1
-qtconsole==4.5.1
-requests==2.22.0
+qtconsole==4.4.3
+requests==2.21.0
 retrying==1.3.3
 Send2Trash==1.5.0
 six==1.12.0
-terminado==0.8.2
+SQLAlchemy==1.3.15
+terminado==0.8.1
 testpath==0.4.2
-tornado==6.0.3
+tornado==6.0.1
+tqdm==4.43.0
 traitlets==4.3.2
-urllib3==1.25.3
+urllib3==1.24.1
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.4.2
