--- a/requirements.txt
+++ b/requirements.txt
@@ -28,10 +28,10 @@ Mako==1.1.2
 MarkupSafe==1.1.1
 matplotlib==3.1.3
 mistune==0.8.4
-nbclean==0.3.2
 nbconvert==5.6.1
 nbformat==4.4.0
 nbgrader==0.6.1
+nbstripout==0.3.7
 notebook==5.7.6
 numpy==1.16.2
 pandas==0.24.1
