Index MSMarco with some basic experiments (BM25, etc) (#15)
* Cleanup docker scripts to only use docker-compose

* Issue 7: Cleanup duplication in docker config

* Issue #6: Add kibana to the all in one docker

* initial msmarco parsing and eval

* Add MSMarco Solr configs

* compare two strategies via histogram

* flesh out text analysis for msmarco

* Solr user owns msmarco confs

* Add term vector for solr

* library for chi squared collocations

* temporary scripts to build up bigrams

* Volume for Solr index and cfgs

* Clean up tokenization

* Updated schema for misstems with minimal plural stemmer

* Better dumping of bigrams

* Add MSMarco datasets

* Add MS Marco Assets to download

* Put features.txt in data dir

* take out inserted underscores to not screw up plural stemmer

* add data dirs to gitignore

* Tweak volcano plural

* Log training data with gain of every subphrase

* Log term vect dumping throughput

* bigger batch to term vects

* Add nbclean as a requirement

* script using nbclean to clean output from ipynbs

* Rearrange files...

* Add missing __init__

* ADd a few comments

* remove unused lang-specific stuff from msmarco

* Remove unneeded Solr config files

* undo Clear all outputs

* Clean ipynbs script

* clear ipynb outputs

* Clear all outputs in script

* Remove more experimental stuff

* Remove local only ipynbs added my mistake

* Comemnts on MSMarco notebook

* Remove collocation code for PR

* Remove collocation code for PR

* Remove unneeded / experimental files for PR

* Remove unneeded / experimental files

* Rename msmarco notebook

* Switch to nbstripout to pick up all metadata

Co-authored-by: Daniel Worley <danworley@gmail.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,11 +13,25 @@ services:
   
   elastic:
     build:
-      context: ../.
+      context: elasticsearch/es-docker
       dockerfile: Dockerfile
     container_name: hello-ltr-elastic
     ports:
       - 9200:9200
+
+  kibana:
+    build:
+        context: elasticsearch/kb-docker
+        dockerfile: Dockerfile
+    container_name: hello-ltr-kibana
+    expose:
+      - "5601"
+    ports:
+     - "5601:5601"
+    environment:
+      ELASTICSEARCH_HOSTS: "http://hello-ltr-elastic:9200"
+      ELASTICSEARCH_URL: "http://hello-ltr-elastic:9200"
+      SERVER_HOST: "0.0.0.0"
 
   solr:
     build:
