Move solr config under each collection notebook

--- a/docker/solr/Dockerfile
+++ b/docker/solr/Dockerfile
@@ -2,10 +2,10 @@ FROM solr:7.7.1
 
 USER root
 
-ADD tmdb server/solr/configsets/tmdb
-ADD msmarco server/solr/configsets/msmarco
-
+ADD ../notebooks/solr/tmdb/solr_config server/solr/configsets/tmdb
 RUN chown solr:solr server/solr/configsets/tmdb
+
+ADD ../notebooks/solr/msmarco/solr_config server/solr/configsets/msmarco
 RUN chown solr:solr server/solr/configsets/msmarco
 
 USER solr
