Upgrade solr/elastic to latest versions. Remove deprecated type code/config

--- a/notebooks/elasticsearch/.docker/es-docker/elasticsearch.yml
+++ b/notebooks/elasticsearch/.docker/es-docker/elasticsearch.yml
@@ -92,3 +92,5 @@ http.cors.allow-origin: "/http?:.*/"
 http.cors.enabled: true
 indices.query.bool.max_clause_count: 10240
 network.host: 0.0.0.0
+
+discovery.type: single-node
