--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.4.2
 jedi==0.13.3
 Jinja2==2.10
+joblib==0.15.1
 jsonschema==3.0.1
 jupyter==1.0.0
 jupyter-client==5.2.4
@@ -53,11 +54,15 @@ pyzmq==18.0.1
 qtconsole==4.4.3
 requests==2.21.0
 retrying==1.3.3
+scikit-learn==0.23.0
+scipy==1.4.1
 Send2Trash==1.5.0
 six==1.12.0
+sklearn==0.0
 SQLAlchemy==1.3.15
 terminado==0.8.1
 testpath==0.4.2
+threadpoolctl==2.0.0
 tornado==6.0.1
 tqdm==4.43.0
 traitlets==4.3.2
