tests are green

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,15 @@ bleach==3.1.4
 certifi==2019.6.16
 chardet==3.0.4
 cycler==0.10.0
+Cython
 decorator==4.3.2
 defusedxml==0.5.0
 elasticsearch==7.0.0
 entrypoints==0.3
 fuzzywuzzy==0.18.0
 idna==2.8
-ipykernel==5.1.0
-ipython==7.3.0
+ipykernel
+ipython
 ipython-genutils==0.2.0
 ipywidgets==7.4.2
 jedi==0.13.3
@@ -34,13 +35,14 @@ nbformat==4.4.0
 nbgrader==0.6.1
 nbstripout==0.3.7
 notebook==5.7.6
-numpy==1.16.2
-pandas==0.24.1
+numpy
+pandas
 pandocfilters==1.4.2
 parso==0.3.4
 pexpect==4.6.0
 pickleshare==0.7.5
 plotly==3.7.0
+plotnine
 prometheus-client==0.6.0
 prompt-toolkit==2.0.9
 ptyprocess==0.6.0
