--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ defusedxml==0.5.0
 elasticsearch==7.0.0
 entrypoints==0.3
 fuzzywuzzy==0.18.0
+graphviz==0.17
 idna==2.8
 ipykernel
 ipython
@@ -72,3 +73,4 @@ urllib3==1.24.1
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.4.2
+xgboost==1.4.2
