--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ nbgrader==0.6.1
 nbstripout==0.3.7
 notebook==5.7.6
 numpy
-pandas
+pandas==1.3.4
 pandocfilters==1.4.2
 parso==0.3.4
 pexpect==4.6.0
