--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,17 @@ bleach==3.1.4
 certifi==2019.6.16
 chardet==3.0.4
 cycler==0.10.0
-Cython
+Cython==0.29.26
 decorator==4.3.2
 defusedxml==0.5.0
+descartes==1.1.0
 elasticsearch==7.0.0
 entrypoints==0.3
 fuzzywuzzy==0.18.0
 graphviz==0.17
 idna==2.8
-ipykernel
-ipython
+ipykernel==5.5.6
+ipython==7.19.0
 ipython-genutils==0.2.0
 ipywidgets==7.4.2
 jedi==0.13.3
@@ -31,19 +32,22 @@ Mako==1.1.2
 MarkupSafe==1.1.1
 matplotlib==3.1.3
 mistune==0.8.4
+mizani==0.7.3
 nbconvert==5.6.1
 nbformat==4.4.0
 nbgrader==0.6.1
 nbstripout==0.3.7
 notebook==5.7.6
-numpy
+numpy==1.22.1
+palettable==3.3.0
 pandas==1.3.4
 pandocfilters==1.4.2
 parso==0.3.4
+patsy==0.5.2
 pexpect==4.6.0
 pickleshare==0.7.5
 plotly==3.7.0
-plotnine
+plotnine==0.8.0
 prometheus-client==0.6.0
 prompt-toolkit==2.0.9
 ptyprocess==0.6.0
@@ -53,17 +57,17 @@ pyrsistent==0.14.11
 python-dateutil==2.8.0
 python-editor==1.0.4
 pytz==2018.9
-pyzmq==18.0.1
+pyzmq==22.3.0
 qtconsole==4.4.3
 requests==2.21.0
 retrying==1.3.3
-scikit-learn==0.23.0
-scipy==1.4.1
-seaborn
+scikit-learn==1.0.2
+scipy==1.7.3
+seaborn==0.11.2
 Send2Trash==1.5.0
 six==1.12.0
-sklearn==0.0
 SQLAlchemy==1.3.15
+statsmodels==0.13.1
 terminado==0.8.1
 testpath==0.4.2
 threadpoolctl==2.0.0
