Updated scipy to version 1.5.4 due to a build failure on my machine (Apple MacBook w/ M1 chip) and updated Elasticsearch and Kibana to the latest version where the LTR plugin also is available and made the accompanying changes.
Tested locally by running the hello-ltr (ES).ipynb notebook.

--- a/notebooks/elasticsearch/.docker/es-docker/Dockerfile
+++ b/notebooks/elasticsearch/.docker/es-docker/Dockerfile
@@ -1,6 +1,7 @@
-FROM docker.elastic.co/elasticsearch/elasticsearch:7.12.1
+FROM docker.elastic.co/elasticsearch/elasticsearch:7.16.2
 
-RUN bin/elasticsearch-plugin install -b https://github.com/o19s/elasticsearch-learning-to-rank/releases/download/v1.5.5-es7.12.1/ltr-plugin-v1.5.5-es7.12.1.zip
+RUN bin/elasticsearch-plugin install --batch \
+  "https://github.com/o19s/elasticsearch-learning-to-rank/releases/download/v1.5.8-es7.16.2/ltr-plugin-v1.5.8-es7.16.2.zip"
+
 COPY --chown=elasticsearch:elasticsearch elasticsearch.yml /usr/share/elasticsearch/config/
 RUN cat  /usr/share/elasticsearch/config/elasticsearch.yml
-
