--- a/requirements.txt
+++ b/requirements.txt
@@ -1,81 +1,79 @@
-alembic==1.4.2
-appnope==0.1.0
-attrs==19.1.0
-backcall==0.1.0
-bleach==3.1.4
-certifi==2019.6.16
-chardet==3.0.4
-cycler==0.10.0
-Cython==0.29.26
-decorator==4.3.2
-defusedxml==0.5.0
-descartes==1.1.0
-elasticsearch==7.0.0
-entrypoints==0.3
+
+alembic==1.7.6
+appnope==0.1.2
+attrs==21.4.0
+backcall==0.2.0
+bleach==4.1.0
+certifi==2021.10.8
+chardet==4.0.0
+cycler==0.11.0
+Cython
+decorator==5.1.1
+defusedxml==0.7.1
+elasticsearch==7.17.0
+entrypoints==0.4
 fuzzywuzzy==0.18.0
-graphviz==0.17
-idna==2.8
-ipykernel==5.5.6
-ipython==7.19.0
+graphviz==0.19.1
+idna==3.3
+ipykernel==6.4.2
+ipython==7.31.1
 ipython-genutils==0.2.0
-ipywidgets==7.4.2
-jedi==0.13.3
-Jinja2==2.10
-joblib==0.15.1
-jsonschema==3.0.1
+ipywidgets==7.6.5
+jedi==0.18.1
+Jinja2==3.0.3
+joblib==1.1.0
+jsonschema==4.4.0
 jupyter==1.0.0
-jupyter-client==5.2.4
-jupyter-console==6.0.0
-jupyter-core==4.4.0
-kiwisolver==1.1.0
-Mako==1.1.2
-MarkupSafe==1.1.1
-matplotlib==3.1.3
+jupyter-client==7.1.2
+jupyter-console==6.4.0
+jupyter-core==4.9.1
+kiwisolver==1.3.2
+Mako==1.1.6
+MarkupSafe==2.0.1
+matplotlib==3.5.1
 mistune==0.8.4
 mizani==0.7.3
 nbconvert==5.6.1
-nbformat==4.4.0
-nbgrader==0.6.1
-nbstripout==0.3.7
-notebook==5.7.6
+nbformat==5.1.3
+nbgrader==0.6.2
+nbstripout==0.5.0
+notebook==6.4.8
 numpy==1.22.1
-palettable==3.3.0
-pandas==1.3.4
-pandocfilters==1.4.2
-parso==0.3.4
-patsy==0.5.2
-pexpect==4.6.0
+pandas==1.4.0
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
 pickleshare==0.7.5
-plotly==3.7.0
+plotly==5.5.0
 plotnine==0.8.0
-prometheus-client==0.6.0
-prompt-toolkit==2.0.9
-ptyprocess==0.6.0
-Pygments==2.3.1
-pyparsing==2.4.6
-pyrsistent==0.14.11
-python-dateutil==2.8.0
+prometheus-client==0.13.1
+prompt-toolkit==3.0.26
+ptyprocess==0.7.0
+Pygments==2.11.2
+pyparsing==3.0.7
+pyrsistent==0.18.1
+python-dateutil==2.8.2
 python-editor==1.0.4
-pytz==2018.9
+pytz==2021.3
 pyzmq==22.3.0
-qtconsole==4.4.3
-requests==2.21.0
+qtconsole==5.2.2
+requests==2.27.1
 retrying==1.3.3
 scikit-learn==1.0.2
 scipy==1.7.3
 seaborn==0.11.2
-Send2Trash==1.5.0
-six==1.12.0
-SQLAlchemy==1.3.15
-statsmodels==0.13.1
-terminado==0.8.1
-testpath==0.4.2
-threadpoolctl==2.0.0
-tornado==6.0.1
-tqdm==4.43.0
-traitlets==4.3.2
-urllib3==1.24.1
-wcwidth==0.1.7
+Send2Trash==1.8.0
+six==1.16.0
+sklearn==0.0
+SQLAlchemy==1.3.24
+terminado==0.13.1
+testpath==0.5.0
+threadpoolctl==3.1.0
+tornado==6.1
+tqdm==4.62.3
+traitlets==4.3.3
+urllib3==1.26.8
+wcwidth==0.2.5
 webencodings==0.5.1
-widgetsnbextension==3.4.2
-xgboost==1.4.2
+widgetsnbextension==3.5.2
+xgboost==1.5.2
