--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ nbgrader==0.6.2
 nbstripout==0.5.0
 notebook==6.4.8
 numpy==1.21.5
+opensearchpy=2.2.0
 pandas==1.3.5
 pandocfilters==1.5.0
 parso==0.8.3
