--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ appnope==0.1.2
 attrs==21.4.0
 backcall==0.2.0
 bleach==4.1.0
-certifi==2021.10.8
+certifi==2022.12.07
 chardet==4.0.0
 cycler==0.11.0
 Cython
@@ -39,7 +39,7 @@ nbgrader==0.6.2
 nbstripout==0.5.0
 notebook==6.4.8
 numpy==1.21.5
-opensearchpy=2.2.0
+opensearch-py==2.2.0
 pandas==1.3.5
 pandocfilters==1.5.0
 parso==0.8.3
