--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ jedi==0.18.1
 Jinja2==3.0.3
 joblib==1.1.0
 jsonschema==4.4.0
-jupyter==1.0.0
+jupyter
 jupyter-client==7.1.2
 jupyter-console==6.4.0
 jupyter-core==4.9.1
@@ -31,11 +31,11 @@ kiwisolver==1.3.2
 Mako==1.1.6
 MarkupSafe==2.0.1
 matplotlib==3.5.1
-mistune==0.8.4
+mistune
 mizani==0.7.3
-nbconvert==5.6.1
+nbconvert==6.5.0
 nbformat==5.1.3
-nbgrader==0.6.2
+nbgrader
 nbstripout==0.5.0
 notebook==6.4.8
 numpy==1.21.5
@@ -71,7 +71,7 @@ testpath==0.5.0
 threadpoolctl==3.1.0
 tornado==6.1
 tqdm==4.62.3
-traitlets==4.3.3
+traitlets
 urllib3==1.26.8
 wcwidth==0.2.5
 webencodings==0.5.1
