--- a/notebooks/opensearch/docker-compose.yml
+++ b/notebooks/opensearch/docker-compose.yml
@@ -1,7 +1,12 @@
 version: '3'
 services:
   opensearch-node1:
+    #image: opensearch-custom-plugin
+    #opensearchproject/opensearch:2.6.0
+#    image: opensearchproject/opensearch:1.3.9
+    #image: opensearchproject/opensearch:2.8.0
     build: ./.docker/opensearch-docker/.
+    container_name: opensearch-node1
     environment:
       - cluster.name=opensearch-cluster
       - node.name=opensearch-node1
@@ -19,19 +24,21 @@ services:
         hard: 65536
     volumes:
       - opensearch-data1:/usr/share/opensearch/data
-      #- ./opensearch.yml:/usr/share/opensearch/config/opensearch.yml
     ports:
-      - 9201:9200
-      - 9601:9600 # required for Performance Analyzer
+      - "9201:9201"
+      - "9600:9600" # required for Performance Analyzer
     networks:
       - opensearch-net
 
   opensearch-dashboards:
+#    image: opensearchproject/opensearch-dashboards:1.3.9
+#    image: opensearchproject/opensearch-dashboards:2.5.0
     build: ./.docker/osd-docker/.
+    container_name: opensearch-dashboards
     ports:
-      - 5602:5601
+      - "5601:5601"
     environment:
-      - 'OPENSEARCH_HOSTS=["http://opensearch-node1:9200"]'
+      - 'OPENSEARCH_HOSTS=["http://opensearch-node1:9201"]'
       - "DISABLE_SECURITY_DASHBOARDS_PLUGIN=true" # disables security dashboards plugin in OpenSearch Dashboards
     networks:
       - opensearch-net
