--- a/notebooks/opensearch/.docker/osd-docker/Dockerfile
+++ b/notebooks/opensearch/.docker/osd-docker/Dockerfile
@@ -1,1 +1,4 @@
 FROM opensearchproject/opensearch-dashboards:2.5.0
+
+COPY --chown=opensearch-dashboards:opensearch-dashboards opensearch_dashboards.yml /usr/share/opensearch-dashboards/config/
+RUN cat  /usr/share/opensearch-dashboards/config/opensearch_dashboards.yml
