--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,36 @@ services:
       ELASTICSEARCH_URL: "http://hello-ltr-elastic:9200"
       SERVER_HOST: "0.0.0.0"
 
+  opensearch-node1:
+    build:
+      context: ./notebooks/opensearch/.docker/opensearch-docker/
+      dockerfile: Dockerfile
+    container_name: hello-ltr-opensearch
+    ports:
+      - "9201:9201"
+    environment:
+      - "SERVER_HOST=0.0.0.0"
+      - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "DISABLE_INSTALL_DEMO_CONFIG=true"
+      - "DISABLE_SECURITY_PLUGIN=true"
+      - "discovery.type=single-node"
+
+  osd-dashboards:
+    build:
+      context: ./notebooks/opensearch/.docker/osd-docker/
+      dockerfile: Dockerfile
+    container_name: hello-ltr-osd
+    expose:
+      - "5602"
+    ports:
+     - "5602:5602"
+    environment:
+      OPENSEARCH_HOSTS: "http://hello-ltr-opensearch:9201"
+      OPENSEARCH_URL: "http://hello-ltr-opensearch:9201"
+      SERVER_HOST: "0.0.0.0"
+      DISABLE_SECURITY_DASHBOARDS_PLUGIN: true
+
+
   solr:
     build:
       context: ./notebooks/solr/
