--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.6.5
 jedi==0.18.1
 Jinja2==3.0.3
-joblib==1.1.0
+joblib==1.1.1
 jsonschema==4.4.0
 jupyter
 jupyter-client==7.1.2
@@ -30,23 +30,23 @@ jupyter-core==4.9.1
 kiwisolver==1.3.2
 Mako==1.1.6
 MarkupSafe==2.0.1
-matplotlib==3.5.1
+matplotlib==3.7.2
 mistune
-mizani==0.7.3
+mizani==0.9.2
 nbconvert==6.5.0
 nbformat==5.1.3
 nbgrader
 nbstripout==0.5.0
 notebook==6.4.8
-numpy==1.21.5
+numpy==1.25.2
 opensearch-py==2.2.0
-pandas==1.3.5
+pandas==2.0.3
 pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 plotly==5.5.0
-plotnine==0.8.0
+plotnine==0.12.2
 prometheus-client==0.13.1
 prompt-toolkit==3.0.26
 ptyprocess==0.7.0
@@ -56,16 +56,16 @@ pyrsistent==0.18.1
 python-dateutil==2.8.2
 python-editor==1.0.4
 pytz==2021.3
-pyzmq==22.3.0
+pyzmq==25.1.1
 qtconsole==5.2.2
 requests==2.27.1
 retrying==1.3.3
-scikit-learn==1.0.2
-scipy==1.7.3
+scikit-learn==1.3.0
+scipy==1.11.2
 seaborn==0.11.2
 Send2Trash==1.8.0
 six==1.16.0
-sklearn==0.0
+#sklearn==1.3.0
 SQLAlchemy==1.3.24
 terminado==0.13.1
 testpath==0.5.0
@@ -77,4 +77,4 @@ urllib3==1.26.8
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.2
-xgboost==1.5.2
+xgboost==1.7.6
